syntax = "proto3";

package rate;

message GetUSDRatesPayload {}

message ConversationRate {
  double USD = 1;
  double AED = 2;
  double AFN = 3;
  double ALL = 4;
  double AMD = 5;
  double ANG = 6;
  double ADA = 7;
  double ARS = 8;
  double AUD = 9;
 double AWG = 10;
  double AZN = 11;
  double BAM = 12;
  double BBD = 13;
  double BDT = 14;
  double BGN = 15;
  double BHD = 16;
  double BIF = 17;
  double BMD = 18;
  double BND = 19;
  double BOB = 20;
  double BRL = 21;
  double BSD = 22;
  double BTN = 23;
  double BWP = 24;
  double BYN = 25;
  double BZD = 26;
  double CAD = 27;
  double CDF = 28;
  double CHF = 29;
  double CLP = 30;
  double CNY = 31;
  double COP = 32;
  double CRC = 33;
  double CUP = 34;
  double CVE = 35;
  double DJF = 37;
  double DKK = 38;
  double DOP = 39;
  double DZD = 40;
  double EGP = 41;
  double ERN = 42;
  double ETB = 43;
  double EUR = 44;
  double FJD = 45;
  double FKP = 46;
  double FOK = 47;
  double GBP = 48;
  double GEL = 49;
  double GGP = 50;
  double GHS = 51;
  double GIP = 52;
  double GMD = 53;
  double GNF = 54;
  double GTQ = 55;
  double GYD = 56;
  double HKD = 57;
  double HNL = 58;
  double HRK = 59;
  double HTG = 60;
  double HUF = 61;
  double IDR = 62;
  double ILS = 63;
  double IMP = 64;
  double INR = 65;
  double IQD = 66;
  double IRR = 67;
  double ISK = 68;
  double JEP = 69;
  double JMD = 70;
  double JOD = 71;
  double JPY = 72;
  double KES = 73;
  double KGS = 74;
  double KHR = 75;
  double KID = 76;
  double KMF = 77;
  double KRW = 78;
  double KWD = 79;
  double KYD = 80;
  double KZT = 81;
  double LAK = 82;
  double LBP = 83;
  double LKR = 84;
  double LRD = 85;
  double LSL = 86;
  double LYD = 87;
  double MAD = 88;
  double MDL = 89;
  double MGA = 90;
  double MKD = 91;
  double MMK = 92;
  double MNT = 93;
  double MOP = 94;
  double MRU = 95;
  double MUR = 96;
  double MVR = 97;
  double MWK = 98;
  double MXN = 99;
  double MYR = 100;
  double MZN = 101;
  double NAD = 102;
  double NGN = 103;
  double NIO = 104;
  double NOK = 105;
  double NPR = 106;
  double NZD = 107;
  double OMR = 108;
  double PAB = 109;
  double PEN = 110;
  double PGK = 111;
  double PHP = 112;
  double PKR = 113;
  double PLN = 114;
  double PYG = 115;
  double QAR = 116;
  double RON = 117;
  double RSD = 118;
  double RUB = 119;
  double RWF = 120;
  double SAR = 121;
  double SBD = 122;
  double SCR = 123;
  double SDG = 124;
  double SEK = 125;
  double SGD = 126;
  double SHP = 127;
  double SLE = 128;
  double SLL = 129;
  double SOS = 130;
  double SRD = 131;
  double SSP = 132;
  double STN = 133;
  double SYP = 134;
  double SZL = 135;
  double THB = 136;
  double TJS = 137;
  double TMT = 138;
  double TND = 139;
  double TOP = 140;
  double TRY = 141;
  double TTD = 142;
  double TVD = 143;
  double TWD = 144;
  double TZS = 145;
  double UAH = 146;
  double UGX = 147;
  double UYU = 148;
  double UZS = 149;
  double VES = 150;
  double VND = 151;
  double VUV = 152;
  double WST = 153;
  double XAF = 154;
  double XCD = 155;
  double XDR = 156;
  double XOF = 157;
  double XPF = 158;
  double YER = 159;
  double ZAR = 160;
  double ZMW = 161;
  double ZWL = 162;
}

message GetUSDRatesResult {
  int32 status = 1;
  string baseCode = 2;
  string timeLastUpdated = 3;
  string timeNextUpdate = 4;
  ConversationRate conversionRate = 5;
}

service RateService {
  rpc GetUSDRates (GetUSDRatesPayload) returns (GetUSDRatesResult) {}
}
